Add Dummy Window for Handling Hotkey Events

--- a/SteamMediaKeys/SteamMediaKeys.vcxproj
+++ b/SteamMediaKeys/SteamMediaKeys.vcxproj
@@ -76,6 +76,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="smk.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="smk.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
